Fixed pom.xml - Added jdk-11 compiler and maven plugin support for successful project   build and run.